Bug 1471163 - Set scrollbar-color on Linux for devtools.
Also force scrollbar-color for the DevTools light theme on Linux, to avoid visual conflicts with dark GTK themes.

TODO: Remove the floating scrollbar implementation after implementing scrollbar-color for MacOS.

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -27,6 +27,15 @@
   --proportional-font-family: Lucida Grande, Tahoma, sans-serif;
 }
 
+/**
+ * Customize scrollbar colors on Linux + light theme, to avoid visual conflicts
+ * between the light theme and the selected GTK theme (see bug 1471163).
+ * This removes GTK scrollbars and uses a fallback design (see bug 1464723).
+ */
+:root[platform="linux"].theme-light {
+  scrollbar-color: var(--theme-body-color-inactive) var(--grey-20);
+}
+
 .devtools-monospace {
   font-family: var(--monospace-font-family);
 }
